@@ -1,9 +1,0 @@
-﻿using AllOverIt.Serialization.SystemTextJson.Converters;
-using EnrichedEnumModelBinding.Models;
-
-namespace EnrichedEnumModelBinding.Converters
-{
-    internal sealed class ForecastPeriodJsonConverter : EnrichedEnumJsonConverter<ForecastPeriod>
-    {
-    }
-}
