@@ -1,9 +1,0 @@
-﻿using AllOverIt.Converters;
-using EnrichedEnumModelBinding.Models;
-
-namespace EnrichedEnumModelBinding.Converters
-{
-    public class ForecastPeriodTypeConverter : EnrichedEnumTypeConverter<ForecastPeriod>
-    {
-    }
-}
