@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RichEnumModelBinding": {
+    "EnrichedEnumModelBinding": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
